k8s/dashy/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
  labels:
    name: dashy
