k8s/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
  labels:
    app: dashy
    kubernetes.io/name: "dashy"
spec:
  type: NodePort
  ports:
    - name: dashy
      port: 4000
      targetPort: 80
      nodePort: 30019
  selector:
    app: dashy
